# personal_diary

./: README.md  databas.json  docker-compose.yaml  dockerfile  pyproject.toml  sample.env
config/: settings.py  urls.py
diary/: admin.py  forms.py  models.py  urls.py  views.py
diary/migrations/: 0001_initial.py  0002_alter_post_title.py
diary/templates/block/: footer.html  navbar.html
diary/templates/diary/: base.html  index.html  post_create.html  post_delete.html  post_detail.html  search.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_username.py  0003_user_fullname.py  0004_user_token.py  0005_remove_user_token.py  0006_user_token.py
users/templates/users/: invalid_email.html  login.html  logout.html  registration.html  reset_password.html  user_form.html
